# file-watcher

./: .gitignore  Cargo.toml  README.md  cspell.json  instructions.md  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  install-gh.sh  setup.sh
fw/: Cargo.toml  Cargo.toml.bak  build.rs
fw-common/: Cargo.toml
fw-common/src/: lib.rs
fw-ebpf/: Cargo.toml
fw-ebpf/src/: main.rs
fw/src/: cli.rs  collector.rs  main.rs
fw/tests/: integration_tests.rs
src/: ebpf_monitor.rs  file_event.rs
