[workspace]
members = ["fw", "fw-ebpf", "fw-common"]
resolver = "2"

[workspace.dependencies]
# Common dependencies across workspace
aya = "0.13.1"
aya-log = "0.2"

[profile.dev]
# Faster compilation in debug mode
opt-level = 0
debug = true

[profile.release]
# Production optimizations
lto = true
codegen-units = 1
panic = "abort"
